Updating npm start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/server.js",
   "scripts": {
-    "start": "node lib/server.js",
+    "start": "node lib/connection-manager.js",
     "eslint": "eslint --ext .js .",
     "pretest": "./test/setup.sh",
     "posttest": "./test/teardown.sh",
