--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@evrythng/thng-node-core": "^6.0.1",
     "bunyan": "^1.8.12",
     "joi": "^13.3.0",
+    "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "retry": "^0.12.0",
     "ringpop": "^10.20.0",
