--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "npm run eslint && nyc node_modules/.bin/_mocha 'test/**/*.js'",
     "test:it": "nyc node_modules/.bin/_mocha 'test/it/**/*.js'",
     "test:unit": "nyc node_modules/.bin/_mocha 'test/unit/**/*.js'",
-    "create-build-info": "node scripts/build-info.js"
+    "create-build-info": "node scripts/build-info.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -82,6 +83,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.1",
     "eslint": "^4.18.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
